Initial commit: Personal website built with Spectre theme

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/reset.css';
 import '../styles/globals.css';
+import '../styles/mermaid.css';
 
 import Background from '../components/Background.astro';
 import Navbar from '../components/Navbar.astro';
