--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,18 @@
 ---
 import '../styles/index.css';
 
-import ProfilePicture from '../assets/pfp.png';
-
 import Card from '../components/Card.astro';
 import Layout from '../layouts/Layout.astro';
-import ImageGlow from '../components/ImageGlow.astro';
 import Icon from '../components/Icon.astro';
 import { getCollection } from 'astro:content';
 import { getEntry } from 'astro:content';
 import { render } from 'astro:content';
-import { name, openGraph } from 'spectre:globals';
+import { openGraph } from 'spectre:globals';
 
-const [posts, projects, about, workExperience, quickInfo, socials] = await Promise.all([
+const [posts, projects, about, socials] = await Promise.all([
 	getCollection('posts', (post) => post.data.draft !== true),
 	getCollection('projects'),
 	getEntry('other', 'about'),
-	getCollection('workExperience'),
-	getCollection('quickInfo'),
 	getCollection('socials')
 ]);
 
@@ -26,23 +21,11 @@ const { Content: About } = await render(about!);
 ---
 
 <Layout
-	title={openGraph.home.title || name}
+	title={openGraph.home.title}
 	description={openGraph.home.description}
 	pagefindIgnore
 >
 	<div class="layout-grid-left" slot="left">
-		<Card class="flex-col-card">
-			<ImageGlow quality={100} width={120} height={120} src={ProfilePicture} alt="Louis looking out of a window" loading='eager' />
-			<h2>{name}</h2>
-			<ul class="overview-list">
-				{quickInfo.map((info) => (
-					<li>
-						<Icon type={info.data.icon.type} name={info.data.icon.name as any} width={24} height={24} class='glow-icon' />
-						<span>{info.data.text}</span>
-					</li>
-				))}
-			</ul>
-		</Card>
 		<Card>
 			<h3 class="no-mt">Socials</h3>
 			<ul class="overview-list">
@@ -61,7 +44,7 @@ const { Content: About } = await render(about!);
 		<Card>
 			<div class="header-container">
 				<Icon type='lucide' name="user" width={24} height={24} class='glow-icon' />
-				<h2>About me</h2>
+				<h2>About Me</h2>
 			</div>
 			<div class="prose">
 				<About />
@@ -98,22 +81,6 @@ const { Content: About } = await render(about!);
 						</div>
 						<span>{project.data.description}</span>
 					</a>
-				))}
-			</div>
-		</Card>
-		<Card>
-			<div class="header-container">
-				<Icon type='lucide' name="briefcase-business" width={24} height={24} class='glow-icon' />
-				<h2>Work Experience</h2>
-			</div>
-			<div class="work-experience-container">
-				{workExperience.reverse().map((entry) => (
-					<div class="work-experience-entry">
-						<span class="work-experience-duration">{entry.data.duration}</span>
-						<h3 class="work-experience-company">{entry.data.company}</h3>
-						<span class="work-experience-role">{entry.data.title}</span>
-						<p class="work-experience-desc">{entry.data.description}</p>
-					</div>
 				))}
 			</div>
 		</Card>
