--- a/src/pages/articles/[post].astro
+++ b/src/pages/articles/[post].astro
@@ -89,7 +89,7 @@ const { Content, headings } = await render(post);
       </div>
       <Content />
       <hr class="end-of-article" />
-      <a href="/blog" class="block-link" data-pagefind-ignore>← Back to blog</a>
+      <a href="/articles" class="block-link" data-pagefind-ignore>← Back to articles</a>
     </Card>
     {giscus && (
       <Card>
