--- a/src/styles/article-list.css
+++ b/src/styles/article-list.css
@@ -21,19 +21,19 @@
   gap: 1rem;
 }
 
-.blog-tag {
+.article-tag {
   padding: .25rem .5rem;
   background: #252525;
   color: white;
   text-decoration: none;
 }
 
-.blog-tag:hover, .blog-tag:focus-visible {
+.article-tag:hover, .article-tag:focus-visible {
   background: #353535;
   color: white;
   text-decoration: none;
 }
 
-.blog-tag.active {
+.article-tag.active {
   background: var(--primary);
 }
