style: adjust layout and styling for interview prep pages

--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -1,3 +1,6 @@
+<!--
+COMMENTED OUT - Background letter animation
+
 ---
 import '../styles/background.css';
 ---
@@ -23,3 +26,6 @@ import '../styles/background.css';
         z-index: -1;
     }
 </style>
+-->
+
+<!-- Background animation disabled for cleaner light theme -->
