--- a/src/components/LayoutGrid.astro
+++ b/src/components/LayoutGrid.astro
@@ -14,6 +14,8 @@
     gap: 2rem;
     grid-template-columns: 2fr 5fr;
     grid-template-rows: auto;
+    min-height: 400px;
+    contain: layout;
   }
 
   @media screen and (max-width: 1380px) {
