--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -205,7 +205,7 @@ const path = Astro.url.pathname;
   }
 
   #search::placeholder {
-    color: white;
+    color: #3d464d;
   }
 
   #search:focus {
@@ -216,7 +216,7 @@ const path = Astro.url.pathname;
     position: absolute;
     top: calc(100% + .5rem);
     right: 0;
-    background-color: #252525;
+    background-color: #ffffff;
     border: 1px solid var(--primary);
     display: none;
     width: 200%;
@@ -232,8 +232,8 @@ const path = Astro.url.pathname;
     display: none;
     width: 40px;
     height: 40px;
-    background-color: #121212;
-    border: 1px solid #353535;
+    background-color: #ffffff;
+    border: 1px solid #7b8994;
     align-items: center;
     justify-content: center;
     cursor: pointer;
@@ -285,20 +285,20 @@ const path = Astro.url.pathname;
     }
 
     nav.active {
-      background-color: #181818;
+      background-color: #f8f9fa;
     }
 
     nav.active ul {
       opacity: 1;
       pointer-events: all;
-      background-color: #181818;
+      background-color: #f8f9fa;
     }
 
     nav ul li {
       position: relative;
       transition: all .25s ease-out;
       top: -1.5rem;
-      border-bottom: 1px solid #353535;
+      border-bottom: 1px solid #e5e7ea;
       width: 100%;
       max-width: none;
       padding: 0;
@@ -313,7 +313,7 @@ const path = Astro.url.pathname;
     }
 
     nav ul li:first-child {
-      border-top: 1px solid #353535;
+      border-top: 1px solid #e5e7ea;
     }
 
     nav.active ul li {
@@ -337,7 +337,7 @@ const path = Astro.url.pathname;
   #search-results a {
     display: block;
     text-decoration: none;
-    color: white !important;
+    color: #3d464d !important;
     padding: .5rem;
   }
 
@@ -364,13 +364,13 @@ const path = Astro.url.pathname;
 
   #search-results mark {
     background-color: var(--primary);
-    color: white;
+    color: #3d464d;
   }
 
   .separator {
     margin: .5rem .5rem;
     border: none;
     height: 1px;
-    background-color: #353535;
+    background-color: #e5e7ea;
   }
 </style>
