--- a/src/styles/article.css
+++ b/src/styles/article.css
@@ -14,7 +14,7 @@ article {
 article hr {
   height: 1px;
   border: none;
-  background-color: #353535;
+  background-color: #e5e7ea;
 }
 
 p:has(img) {
@@ -44,15 +44,17 @@ p img {
 }
 
 .toc-card ol li a {
-  color: #c7c7c7;
+  color: #47525d;
   font-size: .925rem;
   padding: .25rem .5rem;
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
+  will-change: auto;
+  contain: layout style;
 }
 
 .toc-card ol li a:hover {
-  color: white;
+  color: #3d464d;
   text-decoration: none;
 }
 
@@ -73,14 +75,19 @@ ol li a.active {
   background: var(--primary);
 }
 
-.left {
-  height: 100%;
-  position: relative;
+.layout-grid-left {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 2rem;
+  min-height: 200px;
+  contain: layout;
 }
 
 .toc-card {
   position: sticky;
-  top: 2rem;
+  top: 0;
+  contain: layout;
 }
 
 .article-header {
@@ -94,24 +101,22 @@ ol li a.active {
   display: flex;
   flex-direction: column;
   gap: .5rem;
-  position: absolute;
-  bottom: 1.5rem;
-  left: 1rem;
-  max-width: calc(100% - 3rem);
+  position: relative;
+  margin-top: 1rem;
+  width: fit-content;
+  max-width: 100%;
   z-index: 2;
 }
 
 .article-h1 {
   margin-bottom: 0;
   font-size: 2em;
-  background: #ffffff;
-  padding: .25rem .675rem;
-  box-decoration-break: clone;
-  -webkit-box-decoration-break: clone;
+  background-color: transparent;
+  padding: 0;
   position: relative;
   line-height: 1.2;
   display: inline;
-  color: #000000;
+  color: #3d464d;
 }
 
 .article-info {
@@ -119,11 +124,9 @@ ol li a.active {
   flex-direction: row;
   gap: .5rem;
   font-family: 'Geist Mono', 'Courier New', Courier, monospace;
-  background: #ffffff;
-  color: #000000;
-  box-decoration-break: clone;
-  -webkit-box-decoration-break: clone;
-  padding: 0 .75rem;
+  background-color: transparent;
+  color: #3d464d;
+  padding: 0;
   width: fit-content;
 }
 
@@ -141,19 +144,20 @@ ol li a.active {
     display: inline;
     background-color: transparent;
     padding: 0;
-    color: white;
+    color: #3d464d;
   }
 
   .article-info {
     display: block;
     background-color: transparent;
     padding: 0;
-    color: white;
+    color: #3d464d;
   }
 }
 
 code:not(.astro-code code) {
-  background-color: #353535;
+  background-color: #f8f9fa;
+  color: #3d464d;
   padding: .125rem .25rem;
   font-size: .925rem;
 }
@@ -169,7 +173,7 @@ code:not(.astro-code code) {
   margin-bottom: 1.5rem;
   width: 100%;
   height: 1px;
-  background-color: #353535;
+  background-color: #e5e7ea;
   border: none;
 }
 
@@ -195,7 +199,7 @@ table {
 
 table th {
   padding: .5rem 1.5rem .5rem 0;
-  border-bottom: 1px solid #353535;
+  border-bottom: 1px solid #e5e7ea;
 }
 
 table tbody {
@@ -203,7 +207,7 @@ table tbody {
 }
 
 table tbody tr {
-  border-bottom: 1px solid #353535;
+  border-bottom: 1px solid #e5e7ea;
 }
 
 table tbody tr td {
