--- a/src/styles/giscus.css
+++ b/src/styles/giscus.css
@@ -1,98 +1,98 @@
-/* ! Modified from GitHub's dark theme in primer/primitives.
+/* ! Modified from GitHub's light theme in primer/primitives.
  * MIT License
  * Copyright (c) 2018 GitHub Inc.
  * https://github.com/primer/primitives/blob/main/LICENSE
  */
 main {
-  --color-prettylights-syntax-comment: #8b949e;
-  --color-prettylights-syntax-constant: #79c0ff;
-  --color-prettylights-syntax-entity: #d2a8ff;
-  --color-prettylights-syntax-storage-modifier-import: #c9d1d9;
-  --color-prettylights-syntax-entity-tag: #7ee787;
-  --color-prettylights-syntax-keyword: #ff7b72;
-  --color-prettylights-syntax-string: #a5d6ff;
-  --color-prettylights-syntax-variable: #ffa657;
-  --color-prettylights-syntax-brackethighlighter-unmatched: #f85149;
-  --color-prettylights-syntax-invalid-illegal-text: #f0f6fc;
-  --color-prettylights-syntax-invalid-illegal-bg: #8e1519;
-  --color-prettylights-syntax-carriage-return-text: #f0f6fc;
-  --color-prettylights-syntax-carriage-return-bg: #b62324;
-  --color-prettylights-syntax-string-regexp: #7ee787;
-  --color-prettylights-syntax-markup-list: #f2cc60;
-  --color-prettylights-syntax-markup-heading: #1f6feb;
-  --color-prettylights-syntax-markup-italic: #c9d1d9;
-  --color-prettylights-syntax-markup-bold: #c9d1d9;
-  --color-prettylights-syntax-markup-deleted-text: #ffdcd7;
-  --color-prettylights-syntax-markup-deleted-bg: #67060c;
-  --color-prettylights-syntax-markup-inserted-text: #aff5b4;
-  --color-prettylights-syntax-markup-inserted-bg: #033a16;
-  --color-prettylights-syntax-markup-changed-text: #ffdfb6;
-  --color-prettylights-syntax-markup-changed-bg: #5a1e02;
-  --color-prettylights-syntax-markup-ignored-text: #c9d1d9;
-  --color-prettylights-syntax-markup-ignored-bg: #1158c7;
-  --color-prettylights-syntax-meta-diff-range: #d2a8ff;
-  --color-prettylights-syntax-brackethighlighter-angle: #8b949e;
-  --color-prettylights-syntax-sublimelinter-gutter-mark: #484f58;
-  --color-prettylights-syntax-constant-other-reference-link: #a5d6ff;
-  --color-btn-text: #c7c7c7;
-  --color-btn-bg: rgb(51 51 51 / 80%);
-  --color-btn-border: rgb(246 246 246 / 10%);
-  --color-btn-shadow: 0 0 transparent;
-  --color-btn-inset-shadow: 0 0 transparent;
-  --color-btn-hover-bg: rgb(51 51 51 / 50%);
-  --color-btn-hover-border: #8b949e;
-  --color-btn-active-bg: hsl(212deg 12% 18% / 50%);
-  --color-btn-active-border: #6e7681;
-  --color-btn-selected-bg: rgb(51 51 51 / 50%);
+  --color-prettylights-syntax-comment: #6f7a8b;
+  --color-prettylights-syntax-constant: #0550ae;
+  --color-prettylights-syntax-entity: #8250df;
+  --color-prettylights-syntax-storage-modifier-import: #24292f;
+  --color-prettylights-syntax-entity-tag: #116329;
+  --color-prettylights-syntax-keyword: #d73a49;
+  --color-prettylights-syntax-string: #032f62;
+  --color-prettylights-syntax-variable: #e36209;
+  --color-prettylights-syntax-brackethighlighter-unmatched: #82071e;
+  --color-prettylights-syntax-invalid-illegal-text: #f6f8fa;
+  --color-prettylights-syntax-invalid-illegal-bg: #82071e;
+  --color-prettylights-syntax-carriage-return-text: #f6f8fa;
+  --color-prettylights-syntax-carriage-return-bg: #cf222e;
+  --color-prettylights-syntax-string-regexp: #116329;
+  --color-prettylights-syntax-markup-list: #3b2300;
+  --color-prettylights-syntax-markup-heading: #0550ae;
+  --color-prettylights-syntax-markup-italic: #24292f;
+  --color-prettylights-syntax-markup-bold: #24292f;
+  --color-prettylights-syntax-markup-deleted-text: #82071e;
+  --color-prettylights-syntax-markup-deleted-bg: #ffebe9;
+  --color-prettylights-syntax-markup-inserted-text: #116329;
+  --color-prettylights-syntax-markup-inserted-bg: #dafbe1;
+  --color-prettylights-syntax-markup-changed-text: #953800;
+  --color-prettylights-syntax-markup-changed-bg: #ffd8b5;
+  --color-prettylights-syntax-markup-ignored-text: #eaeef2;
+  --color-prettylights-syntax-markup-ignored-bg: #0550ae;
+  --color-prettylights-syntax-meta-diff-range: #8250df;
+  --color-prettylights-syntax-brackethighlighter-angle: #57606a;
+  --color-prettylights-syntax-sublimelinter-gutter-mark: #8c959f;
+  --color-prettylights-syntax-constant-other-reference-link: #0a3069;
+  --color-btn-text: #24292f;
+  --color-btn-bg: #f6f8fa;
+  --color-btn-border: #d0d7de;
+  --color-btn-shadow: 0 1px 0 rgba(31, 35, 40, 0.04);
+  --color-btn-inset-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+  --color-btn-hover-bg: #f3f4f6;
+  --color-btn-hover-border: #d0d7de;
+  --color-btn-active-bg: #ebecf0;
+  --color-btn-active-border: #d0d7de;
+  --color-btn-selected-bg: #ebecf0;
   --color-btn-primary-text: #fff;
-  --color-btn-primary-bg: #8c5cf5;
-  --color-btn-primary-border: rgb(240 246 252 / 10%);
-  --color-btn-primary-shadow: 0 0 transparent;
-  --color-btn-primary-inset-shadow: 0 0 transparent;
-  --color-btn-primary-hover-bg: #996aff;
-  --color-btn-primary-hover-border: rgb(240 246 252 / 10%);
-  --color-btn-primary-selected-bg: #7341df;
-  --color-btn-primary-selected-shadow: 0 0 transparent;
-  --color-btn-primary-disabled-text: rgb(240 246 252 / 50%);
-  --color-btn-primary-disabled-bg: rgb(140 92 245 / 60%);
-  --color-btn-primary-disabled-border: rgb(246 246 246 / 10%);
-  --color-action-list-item-default-hover-bg: rgb(157 157 157 / 12%);
-  --color-segmented-control-bg: rgb(110 110 110 / 10%);
-  --color-segmented-control-button-bg: transparent;
-  --color-segmented-control-button-selected-border: #6b6b6b;
-  --color-fg-default: #ffffff;
-  --color-fg-muted: #c7c7c7;
-  --color-fg-subtle: #484848;
-  --color-canvas-default: transparent;
-  --color-canvas-overlay: rgb(27 27 27 / 90%);
-  --color-canvas-inset: transparent;
-  --color-canvas-subtle: transparent;
-  --color-border-default: #353535;
-  --color-border-muted: #252525;
-  --color-neutral-muted: rgb(118 118 118 / 5%);
-  --color-neutral-subtle: rgb(118 118 118 / 10%);
-  --color-accent-fg: #bc9dff;
-  --color-accent-emphasis: #8c5cf5;
-  --color-accent-muted: rgb(140 92 245 / 40%);
-  --color-accent-subtle: rgb(140 92 245 / 10%);
-  --color-success-fg: #3fb950;
-  --color-attention-fg: #c69026;
-  --color-attention-muted: rgb(174 124 20 / 40%);
-  --color-attention-subtle: rgb(174 124 20 / 15%);
-  --color-danger-fg: #f85149;
-  --color-danger-muted: rgb(229 83 75 / 40%);
-  --color-danger-subtle: rgb(229 83 75 / 10%);
-  --color-primer-shadow-inset: 0 0 transparent;
-  --color-scale-gray-7: #262626;
-  --color-scale-blue-8: #353535;
+  --color-btn-primary-bg: #007ee5;
+  --color-btn-primary-border: rgba(31, 35, 40, 0.15);
+  --color-btn-primary-shadow: 0 1px 0 rgba(31, 35, 40, 0.1);
+  --color-btn-primary-inset-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.03);
+  --color-btn-primary-hover-bg: #1a8ceb;
+  --color-btn-primary-hover-border: rgba(31, 35, 40, 0.15);
+  --color-btn-primary-selected-bg: #0066cc;
+  --color-btn-primary-selected-shadow: inset 0 1px 0 rgba(0, 45, 85, 0.2);
+  --color-btn-primary-disabled-text: rgba(255, 255, 255, 0.8);
+  --color-btn-primary-disabled-bg: #94d3f8;
+  --color-btn-primary-disabled-border: rgba(31, 35, 40, 0.15);
+  --color-action-list-item-default-hover-bg: rgba(208, 215, 222, 0.32);
+  --color-segmented-control-bg: #eaeef2;
+  --color-segmented-control-button-bg: #ffffff;
+  --color-segmented-control-button-selected-border: #8c959f;
+  --color-fg-default: #24292f;
+  --color-fg-muted: #656d76;
+  --color-fg-subtle: #6e7781;
+  --color-canvas-default: #ffffff;
+  --color-canvas-overlay: rgba(255, 255, 255, 0.8);
+  --color-canvas-inset: #f6f8fa;
+  --color-canvas-subtle: #f6f8fa;
+  --color-border-default: #d0d7de;
+  --color-border-muted: hsla(210, 18%, 87%, 1);
+  --color-neutral-muted: rgba(175, 184, 193, 0.2);
+  --color-neutral-subtle: rgba(175, 184, 193, 0.1);
+  --color-accent-fg: #0969da;
+  --color-accent-emphasis: #007ee5;
+  --color-accent-muted: rgba(0, 126, 229, 0.4);
+  --color-accent-subtle: rgba(0, 126, 229, 0.1);
+  --color-success-fg: #1a7f37;
+  --color-attention-fg: #9a6700;
+  --color-attention-muted: rgba(212, 167, 44, 0.4);
+  --color-attention-subtle: rgba(255, 223, 93, 0.2);
+  --color-danger-fg: #d1242f;
+  --color-danger-muted: rgba(255, 129, 130, 0.4);
+  --color-danger-subtle: rgba(255, 129, 130, 0.1);
+  --color-primer-shadow-inset: inset 0 1px 0 rgba(208, 215, 222, 0.2);
+  --color-scale-gray-7: #656d76;
+  --color-scale-blue-8: #0969da;
 
   /*! Extensions from @primer/css/alerts/flash.scss */
-  --color-social-reaction-bg-hover: var(--color-scale-gray-7);
-  --color-social-reaction-bg-reacted-hover: var(--color-scale-blue-8);
+  --color-social-reaction-bg-hover: #f3f4f6;
+  --color-social-reaction-bg-reacted-hover: #dbeafe;
 }
 
 main .pagination-loader-container {
-  background-image: url("https://github.com/images/modules/pulls/progressive-disclosure-line-dark.svg");
+  background-image: url("https://github.com/images/modules/pulls/progressive-disclosure-line.svg");
 }
 
 .gsc-pagination-button {
@@ -100,7 +100,7 @@ main .pagination-loader-container {
 }
 
 .gsc-homepage-bg {
-  background: linear-gradient(135deg, #05485c, #032e58, #2f0154);
+  background: linear-gradient(135deg, #f0f9ff, #e0f2fe, #bae6fd);
   background-size: 600% 600%;
   animation: gradient 21s ease infinite;
 }
@@ -120,5 +120,5 @@ main .pagination-loader-container {
 }
 
 main .gsc-loading-image {
-  background-image: url("https://github.githubassets.com/images/mona-loading-dark.gif");
+  background-image: url("https://github.githubassets.com/images/mona-loading-default.gif");
 }
