--- a/apps/notes/src/components/layout/Header.astro
+++ b/apps/notes/src/components/layout/Header.astro
@@ -5,7 +5,7 @@ import { menuLinks } from "@/site.config";
 import { siteConfig } from "../../site.config";
 ---
 
-<header class="group relative mb-28 flex items-center sm:ps-4" id="main-header">
+<header class="group relative mb-28 flex items-center px-4" id="main-header">
 	<div class="flex sm:flex-col">
 		<a
 			aria-current={Astro.url.pathname === "/" ? "page" : false}
