--- a/apps/notes/src/pages/index.astro
+++ b/apps/notes/src/pages/index.astro
@@ -16,7 +16,7 @@ const meta = {
 ---
 
 <PageLayout meta={meta}>
-	<section>
+	<section class="px-4">
 		<div class="mb-12">
 			<SocialList />
 		</div>
