feat: add linkedin link, fix alignment, and block all crawlers

--- a/apps/notes/src/pages/notes/[...slug].astro
+++ b/apps/notes/src/pages/notes/[...slug].astro
@@ -27,5 +27,7 @@ const meta = {
 ---
 
 <PageLayout meta={meta}>
-	<Note as="h1" note={note} />
+	<section class="px-4">
+		<Note as="h1" note={note} />
+	</section>
 </PageLayout>
