--- a/apps/main/src/pages/index.astro
+++ b/apps/main/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import { Content as BioContent } from './bio.md';
 ---
 
-<Layout title="My Biolink">
+<Layout title="maxames.io">
   <main>
     <BioContent />
   </main>
